# Banking-Multi-Agent-Assistant-with-LangChain-Multi-Agent-Supervisor-Tool-Pattern

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  langgraph.json  pyproject.toml
banking/: __init__.py  prompts - Shortcut.lnk  server.py
banking/agents/: __init__.py  account_agent.py  multi_agent.py  payments_agent.py
banking/config/: __init__.py  settings.py
banking/db/: __init__.py  db_config.py  db_singleton.py  postgres_config.py  postgres_repository.py  postgres_session_sync.py
banking/prompts/: __init__.py  account_prompt.py  main_prompt.py  payments_prompt.py
banking/sample_data/: __init__.py  seed_banking_data.py  seed_script.py
banking/services/: __init__.py  account_service.py  langfuse_service.py  payments_service.py  postgres_db_service.py  postgres_service.py
banking/state/: __init__.py  checkpointer.py  store.py
banking/tools/: __init__.py  account_tools.py  payments_tools.py  supervisor_tools.py
banking/utils/: __init__.py
